feat(html): ✨ Add 'm-popup-share' element in HTML

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. I’ve got some simple tips to help you make any room feel complete.
         </p>
 
-        <footer class="m-preview-card__data-container">
+        <footer class="m-preview-card__data-container m-preview-card__data-container">
           <picture>
             <source type="image/avif" srcset="build/img/avatar-michelle.avif" />
             <source type="image/webp" srcset="build/img/avatar-michelle.webp" />
@@ -29,11 +29,18 @@
             <p class="m-preview-card__data-avatar-name">Michelle Appleton</p>
             <p class="m-preview-card__data-date">28 Jun 2020</p>
           </div>
-
-          <button class="m-preview-card__data-btn">
-            <img src="build/img/icon-share.svg" alt="Icon share" class="m-preview-card__data-btn-img" />
-          </button>
         </footer>
+
+        <button class="m-preview-card__data-btn">
+          <img src="build/img/icon-share.svg" alt="Icon share" class="m-preview-card__data-btn-img" />
+        </button>
+      </div>
+
+      <div class="m-popup-share m-popup-share">
+        <span class="m-popup-share__txt">share</span>
+        <a href="#"><img src="build/img/icon-facebook.svg" class="m-popup-share__icon" alt="Icon Facebook" /></a>
+        <a href="#"><img src="build/img/icon-twitter.svg" class="m-popup-share__icon" alt="Icon Twitter" /></a>
+        <a href="#"><img src="build/img/icon-pinterest.svg" class="m-popup-share__icon" alt="Icon Pinteres" /></a>
       </div>
     </article>
   </body>
