refactor(html): ♻️ Update the HTML structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="icon" type="image/x-icon" sizes="32x32" href="./images/favicon.ico" />
     <link rel="stylesheet" href="build/css/main.css" />
+    <script src="build/js/main.js" defer></script>
   </head>
   <body>
     <article class="m-preview-card">
@@ -18,7 +19,7 @@
           Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. I’ve got some simple tips to help you make any room feel complete.
         </p>
 
-        <footer class="m-preview-card__data-container m-preview-card__data-container">
+        <footer class="m-preview-card__data-container">
           <picture>
             <source type="image/avif" srcset="build/img/avatar-michelle.avif" />
             <source type="image/webp" srcset="build/img/avatar-michelle.webp" />
@@ -36,7 +37,7 @@
         </button>
       </div>
 
-      <div class="m-popup-share m-popup-share">
+      <div class="m-popup-share">
         <span class="m-popup-share__txt">share</span>
         <a href="#"><img src="build/img/icon-facebook.svg" class="m-popup-share__icon" alt="Icon Facebook" /></a>
         <a href="#"><img src="build/img/icon-twitter.svg" class="m-popup-share__icon" alt="Icon Twitter" /></a>
